local-minikube-virtualbox/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: django-app-deployment
  namespace: <namespace>
spec:
  replicas: 1
  selector:
    matchLabels:
      app: django-app
  template:
    metadata:
      labels:
        app: django-app
    spec:
      containers:
        - image: alex662/django_app:minikube
          name: django-app
          ports:
            - containerPort: 80
