local-minikube-virtualbox/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: django-app-service
  namespace: <namespace>
spec:
  selector:
    app: django-app
  ports:
    - port: 80
      targetPort: 80
  type: ClusterIP
